# Course_Work_03

./: .gitignore  README.md  pyproject.toml
src/: functions.py  main.py  operations.json
tests/: test_functions.py
